src/main/java/org/example/mobble/_util/error/ex/ExceptionApi404.java
package org.example.mobble._util.error.ex;

public class ExceptionApi404 extends RuntimeException {
    public ExceptionApi404(String message) {
        super(message);
    }
}
